# seabattle

./: CMakeLists.txt  LICENSE  board.ans  file_id.diz  intro.ans  main.c  reset.bat  reset.sh
